@@ -350,11 +350,11 @@ test string-6.17 {string is alpha, unicode} {
     string is alpha abc\374
 } 1
 test string-6.18 {string is ascii, true} {
-    string is ascii abc\u007Fend
+    string is ascii abc\u007Fend\u0000
 } 1
 test string-6.19 {string is ascii, false} {
-    list [string is ascii -fail var abcdef\u0080more] $var
-} {0 6}
+    list [string is ascii -fail var abc\u0000def\u0080more] $var
+} {0 7}
 test string-6.20 {string is boolean, true} {
     string is boolean true
 } 1
